# F0X-Game

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/assimp/: revision.h
src/: .main.cpp.swo  main.cpp
src/Managers/: ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
src/components/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  StaticMesh.hpp  Terrain.hpp  Transform.hpp  Velocity.hpp
src/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/gameEngine/: GameEngine.cpp  GameEngine.h
src/openGL/: Ebo.cpp  Ebo.h  Texture.cpp  Texture.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h
src/scenes/: Scene1.cpp  Scene1.h
src/screen/: InputManager.cpp  InputManager.h  Screen.cpp  Screen.h
src/shaders/: FragmentShader.cpp  FragmentShader.h  Shader.cpp  Shader.h  VertexShader.cpp  VertexShader.h  fragment.glsl  shader_programs.txt  vertex.glsl
src/systems/: RenderSystem.cpp  RenderSystem.h  TerrainSystem.cpp  TerrainSystem.h  TransformSystem.cpp  TransformSystem.h  VelocitySystem.cpp  VelocitySystem.h
src/utils/: TerrainGenerator.hpp
